--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大事件登录/注册</title>
-    <link rel="stylesheet" href="assets//lib/layui/css/layui.css">
-    <link rel="stylesheet" href="assets/css/login.css">
+    <link rel="stylesheet" href="/assets//lib/layui/css/layui.css">
+    <link rel="stylesheet" href="/assets/css/login.css">
 </head>
 
 <body>
@@ -23,19 +23,19 @@
                 <form class="layui-form" id="form-login">
                     <!-- 用户名 -->
                     <div class="layui-form-item">
-                        <i class="layui-icon layui-icon-username"></i>
+                        <i class="layui-icon layui-icon-username icon-position"></i>
                         <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
                             autocomplete="off" class="layui-input">
                     </div>
                     <!-- 密码 -->
                     <div class="layui-form-item">
-                        <i class="layui-icon layui-icon-password"></i>
+                        <i class="layui-icon layui-icon-password icon-position"></i>
                         <input type="password" name="password" required lay-verify="required|pass" placeholder="请输入密码"
                             autocomplete="off" class="layui-input" >
                     </div>
                     <!-- 登录按钮 -->
                     <div class="layui-form-item">
-                        <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="formDemo">登录</button>
+                        <button class="layui-btn layui-btn-fluid  layui-btn-normal" lay-submit lay-filter="formDemo">登录</button>
                     </div>
                     <div class="layui-form-item link">
                         <a href="javascript:;" id="link_reg">去注册</a>
@@ -47,25 +47,25 @@
                 <form class="layui-form" id="form-reg">
                     <!-- 用户名 -->
                     <div class="layui-form-item">
-                        <i class="layui-icon layui-icon-username"></i>  
+                        <i class="layui-icon layui-icon-username icon-position"></i>  
                         <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
                             autocomplete="off" class="layui-input">
                     </div>
                     <!-- 密码 -->
                     <div class="layui-form-item">
-                        <i class="layui-icon layui-icon-password"></i>
+                        <i class="layui-icon layui-icon-password icon-position"></i>
                         <input type="password" name="password" required lay-verify="required|pass" placeholder="请输入密码"
                             autocomplete="off" class="layui-input" id="pwd">
                     </div>
                     <!-- 确认密码 -->
                     <div class="layui-form-item">
-                        <i class="layui-icon layui-icon-password"></i>
+                        <i class="layui-icon layui-icon-password icon-position"></i>
                         <input type="password" name="repassword" required lay-verify="required|pass|repass" placeholder="请确认密码"
                             autocomplete="off" class="layui-input" >
                     </div>
                     <!-- 登录按钮 -->
                     <div class="layui-form-item">
-                        <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="formDemo">注册</button>
+                        <button class="layui-btn layui-btn-fluid  layui-btn-normal" lay-submit lay-filter="formDemo">注册</button>
                     </div>
                     <div class="layui-form-item link">
                         <a href="javascript:;" id="link_login">去登录</a>
@@ -75,10 +75,10 @@
             </div>
         </div>
     </div>
-    <script src="assets/lib/jquery.js"></script>
-    <script src="assets/lib/layui/layui.all.js"></script>
-    <script src='assets/js/baseAPI.js'></script>
-    <script src="assets/js/login.js"></script>
+    <script src="/assets/lib/jquery.js"></script>
+    <script src="/assets/lib/layui/layui.all.js"></script>
+    <script src='/assets/js/baseAPI.js'></script>
+    <script src="/assets/js/login.js"></script>
 </body>
 
 </html>
